Added instalation to Manual

--- a/User manual/main.tex
+++ b/User manual/main.tex
@@ -57,10 +57,51 @@ Welcome to the Calculator User Guide. This user guide provides documentation for
 This application was created as a group school project at Faculty of Information Technology, BUT.\par
 \newpage
 \section{Installation}
-\subsection{Prerequisites}
 \subsection{Install}
+Firstly you have to download our program. At the start of the download Windows may show you warning and suggest that our program is dangerous. This is happening because our program doesn't have our digital signature yet. Don't worry it is safe, so please select the option keep the file. After that, start the installer with tap or double tap. This message may show up, but don't worry, just click "More info" and click "run anyway". We assure you our app is 100 \% safe. 
+
+\begin{figure}[H]
+\centering
+  \includegraphics[scale=0.9]{protect.jpg}
+  \caption{Error message}
+  \label{fig:calculator}
+\end{figure}
+
+\newpage
+
+After that a small window will show up, where you can choose if you want to install our app just for the current user or for all users. Choose whichever you want. 
+\newline After that this bigger window will show, that includes the licence used for our app. \newline In order to install our app you should read the licence and agree with it's conditions by clicking on "I accept the agreement". After that click on next.  
+\newline
+
+\begin{figure}[H]
+\centering
+  \includegraphics[scale=0.8]{install1.png}
+  \caption{Installation window 1}
+  \label{fig:calculator}
+\end{figure}
+
+\newpage
+In the next window choose where you want to install our app. You can click on a button browse and find the wanted destination or type your destination in the box. Than click on next. 
+\newline
+
+\begin{figure}[H]
+\centering
+  \includegraphics[scale=0.8]{install2.png}
+  \caption{Installation window 2}
+  \label{fig:calculator}
+\end{figure}
+
+In the next window click on "Create a desktop shortcut" if you want to run our app from you desktop. Click on next. The next window will show you the information about the installation. If you find anything wrong, go back using the "Back" button and correct it. 
+\newline If everything is correct click on install and wait until the installation finishes. After that you will get your last window, that informs you, that the installation was successful. You can keep the box checked if you want to start the app, if not click on the box. 
+\newline Click on the finish button and the installation is complete. 
+
+\newpage
 \subsection{Launch}
+If you checked the box "Create a desktop shortcut", you can go to your desktop and double click on the icon to start the application called "Calculator". 
+\newline If you didn't check the box, you have to go to the folder, where you installed our app and double click on the "Calculator.exe" file.   
+
 \subsection{Uninstall}
+Go to the folder, where you installed our application and double click on the "unins000.exe" file to uninstall our app. You will get a small window, where you have to confirm the uninstallation. Click on "Yes" to continue. After that the app will uninstall, wait until it finishes. When it's finished a small window will pop up informing you, that the uninstallation was successful. Click on "Ok" to confirm it. With that the uninstallation is complete. 
 \newpage
 
 \section{Calculator application control}
