User manual update

--- a/User manual/main.tex
+++ b/User manual/main.tex
@@ -53,7 +53,7 @@
 \setcounter{page}{1}
 \pagenumbering{arabic}
 \section{Introduction}
-Welcome to the Calculator User Guide. This user guide provides documentation for people who will use the Calculator on a day-to-day basis. It acquaints users with installation as well as with using the application for mathematical calculations.\par
+Welcome to the Calculator User Guide. This user guide provides documentation for people who will use the Calculator on a day-to-day basis. It acquaints users with installation as well as with using the application for mathematical calculations. Please be aware, that a procedure, which does not follow the instructions, may cause the program to crash.\par
 This application was created as a group school project at Faculty of Information Technology, BUT.\par
 \newpage
 \section{Installation}
@@ -64,7 +64,7 @@ Firstly you have to download our program. At the start of the download Windows m
 \centering
   \includegraphics[scale=0.9]{protect.jpg}
   \caption{Error message}
-  \label{fig:calculator}
+  \label{fig:error}
 \end{figure}
 
 \newpage
@@ -77,7 +77,7 @@ After that a small window will show up, where you can choose if you want to inst
 \centering
   \includegraphics[scale=0.8]{install1.png}
   \caption{Installation window 1}
-  \label{fig:calculator}
+  \label{fig:installation1}
 \end{figure}
 
 \newpage
@@ -88,7 +88,7 @@ In the next window choose where you want to install our app. You can click on a 
 \centering
   \includegraphics[scale=0.8]{install2.png}
   \caption{Installation window 2}
-  \label{fig:calculator}
+  \label{fig:installation}
 \end{figure}
 
 In the next window click on "Create a desktop shortcut" if you want to run our app from you desktop. Click on next. The next window will show you the information about the installation. If you find anything wrong, go back using the "Back" button and correct it. 
@@ -116,7 +116,7 @@ When the application is launched, the standard calculator mode is displayed. It 
 
 \subsection{Entering numbers}
 Use the number panel for entering numbers.
-If you need to delete the last character you wrote, press del (delete), or you can use the C button (clear) to clear all input to the calculator.\par
+If you need to delete the last character you wrote, press del (delete), or you can use the C button (clear) to clear all input to the calculator. Please be aware, that the number of digits that are entered is limited to 15.\par
 
 \subsection{Mathematical operations}
 We distinguish two types of operations: unary (violet), which is an operation with a single operand, and binary (green), which needs two operands to successfully complete the operation.
